-another key for admin -grid from left to right -add zoom and drag to large picture -add one camera in the first loading -filter alarm logs -show video player -add progressbar when the picture is loading

--- a/app/src/main/res/layout/dialog_list_detectors.xml
+++ b/app/src/main/res/layout/dialog_list_detectors.xml
@@ -26,7 +26,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvDetector"
+            android:id="@+id/rvSystemCameras"
             android:name="com.app.simplehostdev.viewLayer.fragments.NewReservationFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:context=".fragment.MainUartFragment"
-            tools:listitem="@layout/sensor_item"
+            tools:listitem="@layout/item_sensor"
             android:scrollbars="vertical"
     />
 
