--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="my_app_color_transparent">#DC0A2240</color>
     <color name="green">#39a647</color>
     <color name="blackCapacity80">#b2000000</color>
+    <color name="blackCapacity50">#75000000</color>
     <color name="medium_green">#39a647</color>
     <color name="gray6">#555555</color>
     <color name="gray7">#acacac</color>
@@ -33,4 +34,9 @@
     <color name="orange">#FF9912</color>
     <color name="red2">#fa090c</color>
     <color name="gray8">#637073</color>
+    <color name="gray9">#524e4e</color>
+    <color name="gray11">#dbd5d5</color>
+    <color name="gray12">#e6e6e6</color>
+    <color name="gray13">#999999</color>
+    <color name="green2">#4b9c55</color>
 </resources>
