--- a/app/src/main/res/layout/item_alarm_grid.xml
+++ b/app/src/main/res/layout/item_alarm_grid.xml
@@ -21,6 +21,32 @@
             app:srcCompat="@drawable/default_alarm_photo" />
 
     <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/ivIconVideo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_video" />
+
+    <ProgressBar
+            android:id="@+id/pbLoadPhoto"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:indeterminateTint="@color/white"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivShare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,6 +54,7 @@
             android:layout_marginEnd="7.7dp"
             app:layout_constraintEnd_toEndOf="@+id/ivAlarmPic"
             app:layout_constraintTop_toTopOf="@+id/ivAlarmPic"
+            android:padding="3dp"
             app:srcCompat="@drawable/ic_share" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -38,6 +65,7 @@
             android:layout_marginTop="7.3dp"
             app:layout_constraintStart_toStartOf="@+id/ivAlarmPic"
             app:layout_constraintTop_toTopOf="@+id/ivAlarmPic"
+            android:padding="3dp"
             app:srcCompat="@drawable/wifi_level_full_grid" />
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -48,6 +76,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/ivWifiLevel"
             app:layout_constraintStart_toEndOf="@+id/ivWifiLevel"
             app:layout_constraintTop_toTopOf="@+id/ivWifiLevel"
+            android:padding="3dp"
             app:srcCompat="@drawable/battery_level_3_grid" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
