--- a/app/src/main/res/layout/on_off_connect_device.xml
+++ b/app/src/main/res/layout/on_off_connect_device.xml
@@ -21,41 +21,41 @@
             app:layout_constraintHorizontal_bias="0.054"
     />
 
-<tools:ToggleButton
-        android:id="@+id/togChangeStatus"
-        android:text="ToggleButton"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@color/transparent"
-        android:button="@drawable/toggle_selector_power"
-        android:textOff=""
-        android:textOn=""
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+    <!--<tools:ToggleButton-->
+    <!--        android:id="@+id/togChangeStatus"-->
+    <!--        android:text="ToggleButton"-->
+    <!--        android:layout_width="25dp"-->
+    <!--        android:layout_height="25dp"-->
+    <!--        android:background="@color/transparent"-->
+    <!--        android:button="@drawable/toggle_selector_power"-->
+    <!--        android:textOff=""-->
+    <!--        android:textOn=""-->
+    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--        app:layout_constraintRight_toRightOf="parent"-->
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.975"
-/>
-    <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_usb"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.853"
-    />
-    <View
-            android:layout_width="1dp"
-            android:layout_height="24dp"
-            android:background="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.888"
-    />
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintHorizontal_bias="0.975"-->
+    <!--/>-->
+    <!--    <androidx.appcompat.widget.AppCompatImageView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            app:srcCompat="@drawable/ic_usb"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="parent"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            app:layout_constraintHorizontal_bias="0.853"-->
+    <!--    />-->
+    <!--    <View-->
+    <!--            android:layout_width="1dp"-->
+    <!--            android:layout_height="24dp"-->
+    <!--            android:background="@color/white"-->
+    <!--            app:layout_constraintStart_toStartOf="parent"-->
+    <!--            app:layout_constraintEnd_toEndOf="parent"-->
+    <!--            app:layout_constraintTop_toTopOf="parent"-->
+    <!--            app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--            app:layout_constraintHorizontal_bias="0.888"-->
+    <!--    />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
