-Add parsing email -Bug fixed

--- a/app/src/main/res/layout/fragment_camera_extra_settings.xml
+++ b/app/src/main/res/layout/fragment_camera_extra_settings.xml
@@ -182,7 +182,7 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="5dp"
                     android:background="@android:color/transparent"
-                    android:entries="@array/camera_type"
+                    android:entries="@array/camera_model"
                     android:gravity="center"
                     android:spinnerMode="dropdown"
                     tools:listitem="@layout/support_simple_spinner_dropdown_item" />
