--- a/app/src/main/res/layout/item_alarm.xml
+++ b/app/src/main/res/layout/item_alarm.xml
@@ -98,8 +98,7 @@
             app:layout_constraintStart_toStartOf="@+id/tvDateTitle"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.952"
-            app:srcCompat="@drawable/wifi_level_full" />
+            app:layout_constraintVertical_bias="0.952" />
 
     <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ivBatteryLevel"
@@ -108,8 +107,7 @@
             android:layout_marginStart="8.7dp"
             app:layout_constraintBottom_toBottomOf="@+id/ivWifiLevel"
             app:layout_constraintStart_toEndOf="@+id/ivWifiLevel"
-            app:layout_constraintTop_toTopOf="@+id/ivWifiLevel"
-            app:srcCompat="@drawable/battery_level_green" />
+            app:layout_constraintTop_toTopOf="@+id/ivWifiLevel" />
 
     <FrameLayout
             android:id="@+id/flAlarmPic"
