-Save the photos in internal storage -Bug fixed:prevent dragging between screens

--- a/app/src/main/res/layout/activity_my_screens.xml
+++ b/app/src/main/res/layout/activity_my_screens.xml
@@ -56,10 +56,7 @@
                 android:visibility="gone"/>
 
 
-
-
-
-    <androidx.viewpager.widget.ViewPager
+    <com.sensoguard.hunter.classes.NonSwipeAbleViewPager
             android:id="@+id/vPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -87,7 +84,7 @@
         />
 
 
-    </androidx.viewpager.widget.ViewPager>
+    </com.sensoguard.hunter.classes.NonSwipeAbleViewPager>
 
     <!--</androidx.appcompat.widget.Toolbar>-->
 
