--- a/app/src/main/res/layout/item_alarm.xml
+++ b/app/src/main/res/layout/item_alarm.xml
@@ -105,9 +105,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8.7dp"
-            app:layout_constraintBottom_toBottomOf="@+id/ivWifiLevel"
-            app:layout_constraintStart_toEndOf="@+id/ivWifiLevel"
-            app:layout_constraintTop_toTopOf="@+id/ivWifiLevel" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.173"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.952" />
 
     <FrameLayout
             android:id="@+id/flAlarmPic"
