--- a/app/src/main/res/layout/fragment_camera_extra_settings.xml
+++ b/app/src/main/res/layout/fragment_camera_extra_settings.xml
@@ -6,7 +6,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/blackCapacity80">
+        android:background="@color/blackCapacity80"
+        android:clickable="true">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
